// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reder corectly 1`] = `
<div>
  <label
    class="form-input"
  >
    <span>
      Description
    </span>
    <input
      name="desc"
      placeholder="Type description"
      type="text"
      value="hello"
    />
  </label>
</div>
`;

exports[`reder corectly with error 1`] = `
<div>
  <label
    class="form-input input-error"
  >
    <span>
      Description
    </span>
    <input
      name="desc"
      placeholder="Type description"
      type="text"
      value="hello"
    />
    <span
      class="error-message"
    >
      Required field
    </span>
  </label>
</div>
`;
